syntax="proto3";

option go_package = "github.com/mohitkumar/api_v1"; 

message GeoPoint {
    double latitude = 1;
    double longitude = 2;
}

message PutRequest{
   GeoPoint point = 1;
   bytes data = 2; 
}

message GetRequest{
    GeoPoint point = 1;
}

message GetResponse{
    bytes data = 1;
}

message PutResponse{
    bool success =1;
}

service Geo{
    rpc Put(PutRequest) returns (PutResponse){}
    rpc Get(GetRequest) returns (GetResponse){}
}

